@@ -1,11 +1,10 @@
 /*
     PowerDNS Versatile Database Driven Nameserver
-    Copyright (C) 2002  PowerDNS.COM BV
+    Copyright (C) 2004  PowerDNS.COM BV
 
     This program is free software; you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation; either version 2 of the License, or
-    (at your option) any later version.
+    it under the terms of the GNU General Public License version 2 as 
+    published by the Free Software Foundation; 
 
     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -172,6 +171,10 @@ void DNSProxy::mainloop(void)
       memcpy(&d,buffer,sizeof(d));
       {
 	Lock l(&d_lock);
+#ifdef WORDS_BIGENDIAN
+	// this is needed because spoof ID down below does not respect the native byteorder
+	d.id = ( 256 * (u_int16_t)buffer[1] ) + (u_int16_t)buffer[0];  
+#endif
 	map_t::iterator i=d_conntrack.find(d.id^d_xor);
 	if(i==d_conntrack.end()) {
 	  L<<Logger::Error<<"Discarding untracked packet from recursor backend with id "<<(d.id^d_xor)<<
